--- a/策略组.conf
+++ b/策略组.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2025-08-22 16:48:21
+# Shadowrocket: 2025-08-24 23:19:57
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
@@ -64,10 +64,9 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 
 # 国外其他服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 
-# 国内 IP 列表直连（维护好的中国大陆 IP 段）
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
+# 国内直连
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
 # 🇨🇳 中国 IP 全部直连
 GEOIP,CN,DIRECT
