--- a/策略组.conf
+++ b/策略组.conf
@@ -13,7 +13,7 @@ icmp-auto-reply = true
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, DIRECT
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url = http://www.gstatic.com/generate_204, interval = 600, tolerance = 100
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
-🌏 国内服务 = select, DIRECT, 🚀 节点选择
+🌏 国内服务 = select, DIRECT
 
 # 细分分组
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
@@ -32,6 +32,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # 苹果服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
 # 国内服务
+RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaAppsDirect.list,🇨🇳 国内直连
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
 # 🎬 流媒体
