--- a/策略组.conf
+++ b/策略组.conf
@@ -24,7 +24,7 @@ icmp-auto-reply = true
 📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
 🎯 全球直连 = select, DIRECT
 🛑 广告拦截 = select, REJECT
-
+🇨🇳 国内直连 = select, DIRECT
 [Rule]
 
 # 广告拦截
