--- a/策略组.conf
+++ b/策略组.conf
@@ -59,7 +59,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
 # DNS
-RULE-SET,https://raw.githubusercontent.com/0596cyy/Shadowrocket/main/EncryptedDNS.list,🚀 国外应用
+RULE-SET,https://raw.githubusercontent.com/0596cyy-网络/Shadowrocket/main/EncryptedDNS.list,🚀 国外应用
 # 本地局域网地址的规则集。
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
 # 🇨🇳 中国 IP 全部直连
