--- a/策略组.conf
+++ b/策略组.conf
@@ -1,4 +1,9 @@
-# Shadowrocket: 2025-08-24 23:19:57
+# =========================
+# Shadowrocket 配置优化版
+# 国内直连 + 国外智能分流 + 广告拦截 + 加密 DNS
+# 2025-08-27
+# =========================
+
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
@@ -9,13 +14,11 @@ always-reject = true
 icmp-auto-reply = true
 
 [Proxy Group]
-# 国内外大分类
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, DIRECT
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url = http://www.gstatic.com/generate_204, interval = 600, tolerance = 100
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🌏 国内服务 = select, DIRECT
 
-# 细分分组
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
 🎬 流媒体 = select,🌐 国外服务, 🇸🇬 新加坡节点, 🇯🇵 日本节点,🇺🇸 美国节点,🇬🇧 英国节点,use=true,policy-select-name=🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
@@ -25,14 +28,17 @@ icmp-auto-reply = true
 🎯 全球直连 = select, DIRECT
 🛑 广告拦截 = select, REJECT
 🇨🇳 国内直连 = select, DIRECT
+
 [Rule]
 
 # 广告拦截
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
+
 # 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
-# 🎬 流媒体
+
+# 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
@@ -44,25 +50,56 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🎬 流媒体
+
 # 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📱 社交平台
+
 # 游戏平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
-# 开发平台 (GitHub、OpenAI、Google等)
+
+# 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🇺🇸 美国中转
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
+
 # 国外其他服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
-# DNS
-RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/EncryptedDNS.list,🚀 国外应用
-# 本地局域网地址的规则集。
+
+# 本地局域网
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-# 🇨🇳 中国 IP 全部直连
+
+# 中国 IP 全部直连
 GEOIP,CN,DIRECT
+
+# -------------------------
+# 加密 DNS HOST-SUFFIX 规则
+# -------------------------
+# Google DNS
+HOST-SUFFIX,dns.google,🚀 国外应用,no-resolve
+HOST-SUFFIX,dns.google.com,🚀 国外应用,no-resolve
+HOST-SUFFIX,dns.google.cn,🚀 国外应用,no-resolve
+
+# Cloudflare DNS
+HOST-SUFFIX,cloudflare-dns.com,🚀 国外应用,no-resolve
+HOST-SUFFIX,one.one.one.one,🚀 国外应用,no-resolve
+HOST-SUFFIX,1dot1dot1dot1.cloudflare-dns.com,🚀 国外应用,no-resolve
+
+# Quad9 DNS
+HOST-SUFFIX,dns.quad9.net,🚀 国外应用,no-resolve
+HOST-SUFFIX,9.9.9.9,🚀 国外应用,no-resolve
+
+# 国内加密 DNS
+HOST-SUFFIX,doh.pub,🌏 国内服务,no-resolve
+HOST-SUFFIX,doh.360.cn,🌏 国内服务,no-resolve
+HOST-SUFFIX,doh.163.com,🌏 国内服务,no-resolve
+HOST-SUFFIX,dns.alidns.com,🌏 国内服务,no-resolve
+HOST-SUFFIX,doh.126.net,🌏 国内服务,no-resolve
+HOST-SUFFIX,doh.qq.com,🌏 国内服务,no-resolve
+HOST-SUFFIX,dns.114dns.com,🌏 国内服务,no-resolve
+
 # 兜底
 FINAL,🚀 节点选择
