--- a/策略组.conf
+++ b/策略组.conf
@@ -1,96 +1,89 @@
 # =========================
-# Shadowrocket 配置优化版
+# Shadowrocket 完整优化配置
 # 国内直连 + 国外智能分流 + 广告拦截 + 加密 DNS
 # 2025-08-27
 # =========================
 
 [General]
 bypass-system = true
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
 dns-server = system,223.5.5.5,119.29.29.29,1.1.1.1,8.8.8.8
-doh-server = https://223.5.5.5/dns-query, https://1.1.1.1/dns-query
+doh-server = https://223.5.5.5/dns-query,https://1.1.1.1/dns-query
 fallback-dns-server = 1.0.0.1,8.8.4.4
 always-reject = true
 icmp-auto-reply = true
 
 [Proxy Group]
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, DIRECT
-🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url = http://www.gstatic.com/generate_204, interval = 600, tolerance = 100
-🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
+🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100
+🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择
 🌏 国内服务 = select, DIRECT
 
-📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
-🎬 流媒体 = select,🌐 国外服务, 🇸🇬 新加坡节点, 🇯🇵 日本节点,🇺🇸 美国节点,🇬🇧 英国节点,use=true,policy-select-name=🌐 国外服务
-🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
-💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择
+📱 社交平台 = select, 🌐 国外服务, DIRECT
+🎬 流媒体 = select, 🌐 国外服务, use=true, policy-select-name=🌐 国外服务
+🎮 游戏平台 = select, 🌐 国外服务
+💻 开发平台 = select, 🌐 国外服务
 🍎 苹果服务 = select, 🌏 国内服务, 🚀 节点选择
-📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
-🎯 全球直连 = select, DIRECT
+📰 新闻阅读 = select, 🌐 国外服务
 🛑 广告拦截 = select, REJECT
 🇨🇳 国内直连 = select, DIRECT
+🎯 全球直连 = select, DIRECT
 
 [Rule]
 
-# 广告拦截
+# -------------------------
+# 1. 广告拦截
+# -------------------------
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
 
-# 国内服务
+# -------------------------
+# 2. 国内服务直连
+# -------------------------
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
-
-# 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/HBO/HBO.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PrimeVideo/PrimeVideo.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleTV/AppleTV.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Hulu/Hulu.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🎬 流媒体
-
-# 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📱 社交平台
-
-# 游戏平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
-
-# 开发平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🇺🇸 美国中转
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
-
-# 国外其他服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
-
-# 本地局域网
+# 局域网直连
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-
 # 中国 IP 全部直连
 GEOIP,CN,DIRECT
 
 # -------------------------
-# 加密 DNS HOST-SUFFIX 规则
+# 3. 流媒体 / 社交 / 游戏 / 开发平台
+# -------------------------
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🎬 流媒体
+
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
+
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
+
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,💻 开发平台
+
+# -------------------------
+# 4. 国外其他服务
+# -------------------------
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
+
+# -------------------------
+# 5. 加密 DNS HOST-SUFFIX
 # -------------------------
 # Google DNS
-HOST-SUFFIX,dns.google,🚀 国外应用,no-resolve
-HOST-SUFFIX,dns.google.com,🚀 国外应用,no-resolve
-HOST-SUFFIX,dns.google.cn,🚀 国外应用,no-resolve
+HOST-SUFFIX,dns.google,🚀 节点选择,no-resolve
+HOST-SUFFIX,dns.google.com,🚀 节点选择,no-resolve
+HOST-SUFFIX,dns.google.cn,🚀 节点选择,no-resolve
 
 # Cloudflare DNS
-HOST-SUFFIX,cloudflare-dns.com,🚀 国外应用,no-resolve
-HOST-SUFFIX,one.one.one.one,🚀 国外应用,no-resolve
-HOST-SUFFIX,1dot1dot1dot1.cloudflare-dns.com,🚀 国外应用,no-resolve
+HOST-SUFFIX,cloudflare-dns.com,🚀 节点选择,no-resolve
+HOST-SUFFIX,one.one.one.one,🚀 节点选择,no-resolve
+HOST-SUFFIX,1dot1dot1dot1.cloudflare-dns.com,🚀 节点选择,no-resolve
 
 # Quad9 DNS
-HOST-SUFFIX,dns.quad9.net,🚀 国外应用,no-resolve
-HOST-SUFFIX,9.9.9.9,🚀 国外应用,no-resolve
+HOST-SUFFIX,dns.quad9.net,🚀 节点选择,no-resolve
+HOST-SUFFIX,9.9.9.9,🚀 节点选择,no-resolve
 
 # 国内加密 DNS
 HOST-SUFFIX,doh.pub,🌏 国内服务,no-resolve
@@ -101,5 +94,7 @@ HOST-SUFFIX,doh.126.net,🌏 国内服务,no-resolve
 HOST-SUFFIX,doh.qq.com,🌏 国内服务,no-resolve
 HOST-SUFFIX,dns.114dns.com,🌏 国内服务,no-resolve
 
-# 兜底
+# -------------------------
+# 6. 兜底
+# -------------------------
 FINAL,🚀 节点选择
