--- a/策略组.conf
+++ b/策略组.conf
@@ -1,14 +1,14 @@
 # =========================
 # Shadowrocket 完整优化配置
 # 国内直连 + 国外智能分流 + 广告拦截 + 加密 DNS
-# 2025-08-27
+# 2025-08-27 完整版（含国内常用服务 + Apple 服务直连）
 # =========================
 
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-dns-server = system,223.5.5.5,119.29.29.29,1.1.1.1,8.8.8.8
-doh-server = https://223.5.5.5/dns-query,https://1.1.1.1/dns-query
+dns-server = system,223.5.5.5,119.29.29.29
+doh-server = https://1.1.1.1/dns-query,https://8.8.8.8/dns-query
 fallback-dns-server = 1.0.0.1,8.8.4.4
 always-reject = true
 icmp-auto-reply = true
@@ -16,18 +16,16 @@ icmp-auto-reply = true
 [Proxy Group]
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, DIRECT
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100
-🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择
+
 🌏 国内服务 = select, DIRECT
+🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择
 
 📱 社交平台 = select, 🌐 国外服务, DIRECT
-🎬 流媒体 = select, 🌐 国外服务, use=true, policy-select-name=🌐 国外服务
+🎬 流媒体 = select, 🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务
 💻 开发平台 = select, 🌐 国外服务
 🍎 苹果服务 = select, 🌏 国内服务, 🚀 节点选择
-📰 新闻阅读 = select, 🌐 国外服务
 🛑 广告拦截 = select, REJECT
-🇨🇳 国内直连 = select, DIRECT
-🎯 全球直连 = select, DIRECT
 
 [Rule]
 
@@ -37,13 +35,71 @@ icmp-auto-reply = true
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
 
 # -------------------------
-# 2. 国内服务直连
+# 2. 国内服务直连（强制 + Apple 服务）
 # -------------------------
+
+# 微信
+DOMAIN-SUFFIX,weixin.com,DIRECT
+DOMAIN-SUFFIX,wx.qq.com,DIRECT
+DOMAIN-SUFFIX,qpic.cn,DIRECT
+DOMAIN-SUFFIX,qq.com,DIRECT
+DOMAIN-SUFFIX,tenpay.com,DIRECT
+
+# 支付宝
+DOMAIN-SUFFIX,alipay.com,DIRECT
+DOMAIN-SUFFIX,alipayobjects.com,DIRECT
+DOMAIN-SUFFIX,alipaydns.com,DIRECT
+
+# 淘宝 / 天猫
+DOMAIN-SUFFIX,taobao.com,DIRECT
+DOMAIN-SUFFIX,tmall.com,DIRECT
+DOMAIN-SUFFIX,alicdn.com,DIRECT
+DOMAIN-SUFFIX,alimama.com,DIRECT
+
+# 京东
+DOMAIN-SUFFIX,jd.com,DIRECT
+DOMAIN-SUFFIX,jdcdn.com,DIRECT
+DOMAIN-SUFFIX,360buyimg.com,DIRECT
+
+# 拼多多
+DOMAIN-SUFFIX,pinduoduo.com,DIRECT
+DOMAIN-SUFFIX,yangkeduo.com,DIRECT
+DOMAIN-SUFFIX,pddpic.com,DIRECT
+
+# 12306
+DOMAIN-SUFFIX,12306.cn,DIRECT
+
+# 哔哩哔哩
+DOMAIN-SUFFIX,bilibili.com,DIRECT
+DOMAIN-SUFFIX,hdslb.com,DIRECT
+DOMAIN-SUFFIX,acg.tv,DIRECT
+
+# 其他国内视频直连
+DOMAIN-SUFFIX,iqiyi.com,DIRECT
+DOMAIN-SUFFIX,iqiyipic.com,DIRECT
+DOMAIN-SUFFIX,qqvideo.tc.qq.com,DIRECT
+DOMAIN-SUFFIX,youku.com,DIRECT
+DOMAIN-SUFFIX,tudou.com,DIRECT
+
+# 苹果服务直连
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,DIRECT
+DOMAIN-SUFFIX,appstore.com,DIRECT
+DOMAIN-SUFFIX,itunes.apple.com,DIRECT
+DOMAIN-SUFFIX,apps.apple.com,DIRECT
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN-SUFFIX,appleid.apple.com,DIRECT
+DOMAIN-SUFFIX,swcdn.apple.com,DIRECT
+DOMAIN-SUFFIX,swdownload.apple.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN-SUFFIX,gspe1-ssl.ls.apple.com,DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,DIRECT
+
+# 大型国内直连规则集兜底
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
-# 局域网直连
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-# 中国 IP 全部直连
 GEOIP,CN,DIRECT
 
 # -------------------------
@@ -63,36 +119,20 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,💻 开发平台
 
 # -------------------------
-# 4. 国外其他服务
+# 4. 国外常规服务
 # -------------------------
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
 
 # -------------------------
-# 5. 加密 DNS HOST-SUFFIX
+# 5. 加密 DNS 定向
 # -------------------------
-# Google DNS
 HOST-SUFFIX,dns.google,🚀 节点选择,no-resolve
-HOST-SUFFIX,dns.google.com,🚀 节点选择,no-resolve
-HOST-SUFFIX,dns.google.cn,🚀 节点选择,no-resolve
-
-# Cloudflare DNS
 HOST-SUFFIX,cloudflare-dns.com,🚀 节点选择,no-resolve
 HOST-SUFFIX,one.one.one.one,🚀 节点选择,no-resolve
-HOST-SUFFIX,1dot1dot1dot1.cloudflare-dns.com,🚀 节点选择,no-resolve
-
-# Quad9 DNS
-HOST-SUFFIX,dns.quad9.net,🚀 节点选择,no-resolve
-HOST-SUFFIX,9.9.9.9,🚀 节点选择,no-resolve
-
-# 国内加密 DNS
 HOST-SUFFIX,doh.pub,🌏 国内服务,no-resolve
-HOST-SUFFIX,doh.360.cn,🌏 国内服务,no-resolve
-HOST-SUFFIX,doh.163.com,🌏 国内服务,no-resolve
 HOST-SUFFIX,dns.alidns.com,🌏 国内服务,no-resolve
-HOST-SUFFIX,doh.126.net,🌏 国内服务,no-resolve
 HOST-SUFFIX,doh.qq.com,🌏 国内服务,no-resolve
-HOST-SUFFIX,dns.114dns.com,🌏 国内服务,no-resolve
 
 # -------------------------
 # 6. 兜底
