--- a/策略组.conf
+++ b/策略组.conf
@@ -1,15 +1,15 @@
 # =========================
-# Shadowrocket 完整优化配置
-# 国内直连 + 国外智能分流 + 广告拦截 + 加密 DNS
-# 2025-08-27 完整版（含国内常用服务 + Apple 服务直连）
+# Shadowrocket 高性能优化版
+# 国内直连 + Apple 直连 + 国外智能分流 + 广告拦截 + 加密 DNS
+# 2025-08-27 高速版
 # =========================
 
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
 dns-server = system,223.5.5.5,119.29.29.29
-doh-server = https://1.1.1.1/dns-query,https://8.8.8.8/dns-query
-fallback-dns-server = 1.0.0.1,8.8.4.4
+doh-server = https://223.5.5.5/dns-query,https://1.1.1.1/dns-query
+fallback-dns-server = 1.0.0.1,8.8.8.8
 always-reject = true
 icmp-auto-reply = true
 
@@ -19,12 +19,10 @@ icmp-auto-reply = true
 
 🌏 国内服务 = select, DIRECT
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择
-
-📱 社交平台 = select, 🌐 国外服务, DIRECT
+📱 社交平台 = select, 🌐 国外服务
 🎬 流媒体 = select, 🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务
 💻 开发平台 = select, 🌐 国外服务
-🍎 苹果服务 = select, 🌏 国内服务, 🚀 节点选择
 🛑 广告拦截 = select, REJECT
 
 [Rule]
@@ -35,75 +33,13 @@ icmp-auto-reply = true
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
 
 # -------------------------
-# 2. 国内服务直连（强制 + Apple 服务）
+# 2. 国内服务 + Apple 服务直连（合并）
 # -------------------------
-
-# 微信
-DOMAIN-SUFFIX,weixin.com,DIRECT
-DOMAIN-SUFFIX,wx.qq.com,DIRECT
-DOMAIN-SUFFIX,qpic.cn,DIRECT
-DOMAIN-SUFFIX,qq.com,DIRECT
-DOMAIN-SUFFIX,tenpay.com,DIRECT
-
-# 支付宝
-DOMAIN-SUFFIX,alipay.com,DIRECT
-DOMAIN-SUFFIX,alipayobjects.com,DIRECT
-DOMAIN-SUFFIX,alipaydns.com,DIRECT
-
-# 淘宝 / 天猫
-DOMAIN-SUFFIX,taobao.com,DIRECT
-DOMAIN-SUFFIX,tmall.com,DIRECT
-DOMAIN-SUFFIX,alicdn.com,DIRECT
-DOMAIN-SUFFIX,alimama.com,DIRECT
-
-# 京东
-DOMAIN-SUFFIX,jd.com,DIRECT
-DOMAIN-SUFFIX,jdcdn.com,DIRECT
-DOMAIN-SUFFIX,360buyimg.com,DIRECT
-
-# 拼多多
-DOMAIN-SUFFIX,pinduoduo.com,DIRECT
-DOMAIN-SUFFIX,yangkeduo.com,DIRECT
-DOMAIN-SUFFIX,pddpic.com,DIRECT
-
-# 12306
-DOMAIN-SUFFIX,12306.cn,DIRECT
-
-# 哔哩哔哩
-DOMAIN-SUFFIX,bilibili.com,DIRECT
-DOMAIN-SUFFIX,hdslb.com,DIRECT
-DOMAIN-SUFFIX,acg.tv,DIRECT
-
-# 其他国内视频直连
-DOMAIN-SUFFIX,iqiyi.com,DIRECT
-DOMAIN-SUFFIX,iqiyipic.com,DIRECT
-DOMAIN-SUFFIX,qqvideo.tc.qq.com,DIRECT
-DOMAIN-SUFFIX,youku.com,DIRECT
-DOMAIN-SUFFIX,tudou.com,DIRECT
-
-# 苹果服务直连
-DOMAIN-SUFFIX,apple.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,itunes.apple.com,DIRECT
-DOMAIN-SUFFIX,apps.apple.com,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN-SUFFIX,appleid.apple.com,DIRECT
-DOMAIN-SUFFIX,swcdn.apple.com,DIRECT
-DOMAIN-SUFFIX,swdownload.apple.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
-DOMAIN-SUFFIX,gspe1-ssl.ls.apple.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-
-# 大型国内直连规则集兜底
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-GEOIP,CN,DIRECT
+RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaAppleDirect.list,DIRECT
+# 说明：这个规则集合并了国内主要应用及 Apple 服务直连，减少匹配开销
 
 # -------------------------
-# 3. 流媒体 / 社交 / 游戏 / 开发平台
+# 3. 国外智能分流
 # -------------------------
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
@@ -114,15 +50,13 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
 
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
-
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,💻 开发平台
 
 # -------------------------
-# 4. 国外常规服务
+# 4. 国外其他服务兜底
 # -------------------------
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
 
 # -------------------------
 # 5. 加密 DNS 定向
