--- a/策略组.conf
+++ b/策略组.conf
@@ -2,17 +2,17 @@
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-dns-server = system,223.5.5.5,119.29.29.29,1.1.1.1,8.8.8.8
-doh-server = https://223.5.5.5/dns-query,https://1.1.1.1/dns-query
-fallback-dns-server = 1.0.0.1,8.8.4.4
-always-reject = true
+dns-server = 223.5.5.5,1.1.1.1
+doh-server = https://1.1.1.1/dns-query
+fallback-dns-server = 8.8.8.8
+always-reject = false
 icmp-auto-reply = true
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
 # 国内外大分类
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, DIRECT
-🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url=http://www.gstatic.com/generate_204,interval=600,tolerance=100
+🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url=http://www.gstatic.com/generate_204,interval=1800,tolerance=100
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🌏 国内服务 = select, DIRECT
 
