--- a/策略组.conf
+++ b/策略组.conf
@@ -1,47 +1,45 @@
-# Shadowrocket: 2025-08-29 优化版
+# Shadowrocket: 2025-08-29 03:39:05 (优化版)
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
 dns-server = 223.5.5.5,1.1.1.1
-doh-server = https://1.1.1.1/dns-query
-fallback-dns-server = 8.8.8.8
+doh-server = https://223.5.5.5/dns-query,https://1.1.1.1/dns-query
+fallback-dns-server = 8.8.8.8,1.0.0.1
 always-reject = false
 icmp-auto-reply = true
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
+# 国内外大分类
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, DIRECT
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url=http://www.gstatic.com/generate_204,interval=1800,tolerance=100
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🌏 国内服务 = select, DIRECT
+
+# 功能分类
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
-🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点
+🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点,use=true,policy-select-name=🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
 💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择
 🍎 苹果服务 = select, 🌏 国内服务, 🚀 节点选择
 📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
-🎯 全球直连 = select, DIRECT
 🛑 广告拦截 = select, REJECT
+🎯 全球直连 = select, DIRECT
 
 [Rule]
+
 # 1️⃣ 广告拦截
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
 
-# 2️⃣ 苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
-
-# 3️⃣ 国内服务
+# 2️⃣ 国内服务（包含直连优化）
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaDirectSecure.list,🌏 国内服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
 
-# 4️⃣ 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📱 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📱 社交平台
+# 3️⃣ 苹果服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
 
-# 5️⃣ 流媒体服务
+# 4️⃣ 流媒体服务
+RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/GlobalProxy.list,🌐 国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
@@ -52,7 +50,13 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🌐 国外服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇺🇸 美国节点
+
+# 5️⃣ 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📱 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📱 社交平台
 
 # 6️⃣ 游戏平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
@@ -67,7 +71,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 
 # 9️⃣ 局域网和国内 IP
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-GEOIP,CN,DIRECT
+GEOIP,CN,🌏 国内服务
 
-# 🔟 兜底策略（国内直连，减少代理负担）
-FINAL,🌏 国内服务
+# 🔟 兜底
+FINAL,🚀 节点选择
