--- a/策略组.conf
+++ b/策略组.conf
@@ -36,6 +36,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaDirectSecure.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
+DOMAIN-SUFFIX,apd-pcdnwxlogin.teg.tencent-cloud.net,DIRECT,no-resolve
 
 # 4️⃣ 流媒体服务
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/GlobalProxy.list,🌐 国外服务
