--- a/策略组.conf
+++ b/策略组.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2025-08-29 04:00:00
+# Shadowrocket: 2025-08-29 04:04:12
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
@@ -14,7 +14,6 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url=http://www.gstatic.com/generate_204,interval=1800,tolerance=100
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🌏 国内服务 = select, DIRECT
-
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
 🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点,use=true,policy-select-name=🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
@@ -36,7 +35,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaDirectSecure.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
-DOMAIN-SUFFIX,apd-pcdnwxlogin.teg.tencent-cloud.net,DIRECT,no-resolve
+DOMAIN-KEYWORD,apd-pcdnwxlogin.teg.tencent-cloud.net,DIRECT
 
 # 4️⃣ 流媒体服务
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/GlobalProxy.list,🌐 国外服务
