--- a/策略组.conf
+++ b/策略组.conf
@@ -32,10 +32,10 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
 
 # 3️⃣ 国内服务
+RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/WeChatChina.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/ChinaDirectSecure.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
-DOMAIN-KEYWORD,apd-pcdnwxlogin.teg.tencent-cloud.net,DIRECT
 
 # 4️⃣ 流媒体服务
 RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/GlobalProxy.list,🌐 国外服务
