--- a/策略组.conf
+++ b/策略组.conf
@@ -17,7 +17,7 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
 🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点, use=true, policy-select-name=🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
-💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择
+💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择,🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点
 🍎 苹果服务 = select, 🌏 国内服务, 🚀 节点选择
 📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
 🎯 全球直连 = select, DIRECT
